@@ -101,6 +101,7 @@ void fordivfactored(GEN a, GEN code);
 void forell0(long a, long b, GEN code, long flag);
 void forperm0(GEN k, GEN code);
 void forprime(GEN a, GEN b, GEN code);
+void forprimestep(GEN a, GEN b, GEN q, GEN code);
 void forstep(GEN a, GEN b, GEN s, GEN code);
 void forsubgroup0(GEN cyc, GEN bound, GEN code);
 void forsubset0(GEN nk, GEN code);
