@@ -35,6 +35,22 @@
 1267650600228229401496703205707
 1267650600228229401496703205653
 1267650600228229401496703205707
+2
+3
+4294967311
+18446744073709551557
+18446744073709551629
+18446744073709551653
+2
+7
+17
+2
+7
+17
+1267650600228229401496703205653
+1267650600228229401496703205707
+1267650600228229401496703205653
+1267650600228229401496703205707
 0.50000000000000000000000000000000000000
 1.5000000000000000000000000000000000000
 2.5000000000000000000000000000000000000
@@ -137,4 +153,4 @@
 [-100001, [-1, 1; 11, 1; 9091, 1]]
 607926
 607926
-Total time spent: 5587
+Total time spent: 5909
