@@ -389,6 +389,7 @@ BA  155- qfisom: allow to give the automorphism group of the second lattice
          arity 1)
     159- [libpari] gprec_wensure
     160- allow forstep(a,b, Mod(c,q), ...)
+    161- new GP function forprimestep
 
   Changed
       1- rewrite bnfnarrow
